# Specs.Generated/openapi_v1_spec.json
@@ -23,61 +23,23 @@
   ],
   "paths": {
     "/banks": {
-      "get": {
+      "query": {
         "tags": [
           "Supervisory"
         ],
         "summary": "Get all banks",
         "description": "Get all banks in the Netherlands.",
         "operationId": "GetAllBanks",
-        "parameters": [
-          {
-            "name": "page",
-            "in": "query",
-            "description": "The page of the result.",
-            "required": true,
-            "schema": {
-              "maximum": 70707070,
-              "minimum": 1,
-              "type": "integer",
-              "format": "int32",
-              "default": 1
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/GridQuery"
+              }
             }
           },
-          {
-            "name": "pageSize",
-            "in": "query",
-            "description": "The pagesize of the result.",
-            "required": true,
-            "schema": {
-              "maximum": 70707070,
-              "minimum": 1,
-              "type": "integer",
-              "format": "int32",
-              "default": 21
-            }
-          },
-          {
-            "name": "sort",
-            "in": "query",
-            "description": "The sorting query expression can be built with a comma-delimited sorted list of field/property names, followed by `asc` or `desc` keywords. \n\nBy default, if you don't add these keywords, the API assumes you need Ascending sorting.",
-            "schema": {
-              "maxLength": 70707070,
-              "pattern": ".*",
-              "type": "string"
-            }
-          },
-          {
-            "name": "filter",
-            "in": "query",
-            "description": "The following filter operators are supported:\n\n### Conditional Operators\n\n| Name                  | Operator | Usage example        |\n|-----------------------|----------|----------------------|\n| Equal                 | `=`      | `FieldName = Value`  |\n| NotEqual              | `!=`     | `FieldName !=Value`  |\n| LessThan              | `<`      | `FieldName < Value`  |\n| GreaterThan           | `>`      | `FieldName > Value`  |\n| GreaterThanOrEqual    | `>=`     | `FieldName >=Value`  |\n| LessThanOrEqual       | `<=`     | `FieldName <=Value`  |\n| Contains - Like       | `=*`     | `FieldName =*Value`  |\n| NotContains - NotLike | `!*`     | `FieldName !*Value`  |\n| StartsWith            | `^`      | `FieldName ^ Value`  |\n| NotStartsWith         | `!^`     | `FieldName !^ Value` |\n| EndsWith              | `$`      | `FieldName $ Value`  |\n| NotEndsWith           | `!$`     | `FieldName !$ Value` |\n\n> Tip: If you don't specify any value after `=` or `!=` operators, the API searches for the `default` and `null` values.\n\n### Logical Operators\n\n| Name        | Operator | Usage example                                   |\n|-------------|----------|-------------------------------------------------|\n| AND         | `,`      | `FirstName = Value, LastName = Value2`          |\n| OR          | `\\|`     | `FirstName=Value\\|LastName=Value2`              |\n| Parenthesis | `()`     | `(FirstName=*Jo,Age<30)\\|(FirstName!=Hn,Age>30)`|\n\n### Case Insensitive Operator\n\nThe `/i` operator can be use after string values for case insensitive searches. You should only use this operator after the search value. \n\nExample:\n```\nFirstName=John/i\n```\n\nthis query matches with `JOHN`, `john`, `John`, `jOHn`, etc.",
-            "schema": {
-              "maxLength": 70707070,
-              "pattern": ".*",
-              "type": "string"
-            }
-          }
-        ],
+          "required": true
+        },
         "responses": {
           "200": {
             "description": "OK",
@@ -809,6 +771,54 @@
         "maxLength": 70707070,
         "pattern": ".*",
         "type": "string"
+      },
+      "GridQuery": {
+        "examples": [
+          {
+            "page": 1,
+            "pageSize": 21,
+            "orderBy": "bankTier desc, name",
+            "filter": "isCompliant = true"
+          }
+        ],
+        "type": "object",
+        "properties": {
+          "page": {
+            "maximum": 70707070,
+            "minimum": 1,
+            "type": "integer",
+            "description": "The page of the result.",
+            "format": "int32",
+            "default": 1
+          },
+          "pageSize": {
+            "maximum": 70707070,
+            "minimum": 1,
+            "type": "integer",
+            "description": "The pagesize of the result.",
+            "format": "int32",
+            "default": 21
+          },
+          "orderBy": {
+            "maxLength": 70707070,
+            "pattern": ".*",
+            "type": [
+              "null",
+              "string"
+            ],
+            "description": "The sorting query expression can be built with a comma-delimited sorted list of field/property names, followed by `asc` or `desc` keywords. \n\nBy default, if you don't add these keywords, the API assumes you need Ascending sorting."
+          },
+          "filter": {
+            "maxLength": 70707070,
+            "pattern": ".*",
+            "type": [
+              "null",
+              "string"
+            ],
+            "description": "The following filter operators are supported:\n\n### Conditional Operators\n\n| Name                  | Operator | Usage example        |\n|-----------------------|----------|----------------------|\n| Equal                 | `=`      | `FieldName = Value`  |\n| NotEqual              | `!=`     | `FieldName !=Value`  |\n| LessThan              | `<`      | `FieldName < Value`  |\n| GreaterThan           | `>`      | `FieldName > Value`  |\n| GreaterThanOrEqual    | `>=`     | `FieldName >=Value`  |\n| LessThanOrEqual       | `<=`     | `FieldName <=Value`  |\n| Contains - Like       | `=*`     | `FieldName =*Value`  |\n| NotContains - NotLike | `!*`     | `FieldName !*Value`  |\n| StartsWith            | `^`      | `FieldName ^ Value`  |\n| NotStartsWith         | `!^`     | `FieldName !^ Value` |\n| EndsWith              | `$`      | `FieldName $ Value`  |\n| NotEndsWith           | `!$`     | `FieldName !$ Value` |\n\n> Tip: If you don't specify any value after `=` or `!=` operators, the API searches for the `default` and `null` values.\n\n### Logical Operators\n\n| Name        | Operator | Usage example                                   |\n|-------------|----------|-------------------------------------------------|\n| AND         | `,`      | `FirstName = Value, LastName = Value2`          |\n| OR          | `\\|`     | `FirstName=Value\\|LastName=Value2`              |\n| Parenthesis | `()`     | `(FirstName=*Jo,Age<30)\\|(FirstName!=Hn,Age>30)`|\n\n### Case Insensitive Operator\n\nThe `/i` operator can be use after string values for case insensitive searches. You should only use this operator after the search value. \n\nExample:\n```\nFirstName=John/i\n```\n\nthis query matches with `JOHN`, `john`, `John`, `jOHn`, etc."
+          }
+        },
+        "additionalProperties": false
       },
       "PagingOfBankModel": {
         "examples": [
